# Robot-arm-0.2.1

./: CMakeLists.txt  README.md  package.xml
arm0_model_sw/: SG90 - Micro Servo 9g - Tower Pro.1.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.2.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.3.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.4.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.5.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.6.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.SLDASM  SG90 - Micro Servo 9g - Tower Pro.x_t  arm0.1.SLDASM  arm0_gripper_base.SLDPRT  arm0_gripper_finger.SLDPRT  base.SLDPRT  gripper.SLDASM  joint.SLDASM  servo frame expand.SLDPRT  servo frame expand_1.SLDPRT  servo frame.SLDPRT  servo gear.SLDPRT  servo gripper.SLDPRT  servo tower.SLDPRT  spin.SLDPRT
config/: controllers.yaml
launch/: gazebo.launch  robot_control.xml  robot_description.xml
meshes/: base_link.STL  gripper_Link.STL  left_Link.STL  link1.STL  link2.STL  link3.STL  link4.STL  right_Link.STL
scripts/: arm_command  arm_mover  image_process
srv/: GoToPosition.srv
urdf/: arm1.gazebo.xacro  arm1.urdf.xacro
